[workspace]

members = [
    "crates/zspell",
    # "crates/zspell-py",
    "crates/zspell-cli",
    "crates/zspell-old"
]

# Build with `cargo build --profile=release-debug`
# Alternatively `cargo bench --profile=release-debug`
# Useful for profiling, not for official releases
[profile.release-debug]
inherits = "release"
debug = true

[profile.release.package.zspell-cli]
# Minimize binary size by removing all symbols
strip = "symbols"
