[workspace]
resolver = "2"
members = [
    "zspell",
    "zspell-py",
    "zspell-cli",
    "zspell/test-util",
]

default-members = [
    "zspell",
    "zspell-cli",
]

# Build with `cargo build --profile=release-debug`
# Alternatively `cargo bench --profile=release-debug`
# Useful for profiling, not for official releases
[profile.release-debug]
# inherits = "release"
inherits = "dev"
opt-level = 3
debug = true
strip = "none"

[profile.release.package.zspell-cli]
# Minimize binary size by removing all symbols
strip = "symbols"
