[package]
name = "zspell-cli"
version = "0.4.1"
edition = "2021"
rust-version = "1.70"

# Note: this is symlinked from top level
readme = "README.md"
license-file = "LICENSE"

# Required to make name "zspell" instead of "zspell-cli"
[[bin]]
name = "zspell"
path = "src/main.rs"

[dependencies]
cfg-if = "1.0"
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
futures-util = "0.3"
hex = "0.4"
indicatif = "0.17"
# We opt to use rustls instead of linking openssl
reqwest = { version = "0.11", features = ["blocking", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha1 = "0.10.6"
stringmetrics = "2.2"
termcolor = "1.3.0"
tokio = "1.33.0"
anyhow = "1.0.75"
zspell = { path = "../zspell", features = ["zspell-unstable"] }

[dev-dependencies]
criterion = "0.5"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
httpmock = "0.6"
lazy_static = "1.4"
# util = { path = "util" }

[build-dependencies]
clap = { version = "4.4", features = ["derive", "wrap_help"] }
clap_mangen = "0.2"
clap_complete = "4.4"

[package.metadata.release]
shared-version = true
