[package]
name = "zspell-cli"
version = "0.5.5"
edition = "2021"
publish = true
description = "Command line interface for the ZSpell spellchecking library"
rust-version = "1.70"


# Note: this is symlinked from top level
readme = "README.md"
license-file = "LICENSE"

documentation = "https://docs.rs/zspell"
repository = "https://github.com/pluots/zspell"

keywords = ["spellcheck", "spelling", "cli"]
categories = ["algorithms", "text-processing", "command-line-utilities"]

# Required to make name "zspell" instead of "zspell-cli"
[[bin]]
name = "zspell"
path = "src/main.rs"

[dependencies]
cfg-if = "1.0"
clap = { version = "4.4.18", features = ["derive", "wrap_help"] }
hex = "0.4"
indicatif = "0.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha1 = "0.10.6"
stringmetrics = "2.2"
termcolor = "1.4.1"
anyhow = "1.0.86"
zspell = { path = "../zspell", version = "0.5.5", features = ["zspell-unstable"] }
ureq = { version = "2.9.7", features = ["json"] }
zspell-index = "0.5.0"

[dev-dependencies]
criterion = "0.5"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
httpmock = "0.7"
# util = { path = "util" }

[build-dependencies]
clap = { version = "4.4", features = ["derive", "wrap_help"] }
clap_mangen = "0.2"
clap_complete = "4.4"

[package.metadata.release]
shared-version = true
allow-branch = ["main", "release"]

[[package.metadata.release.pre-release-replacements]]
file = "Cargo.toml"
# Need \d match so we don't accidentally match our pattern here
search = 'zspell = \{ path = "../zspell", version = "[\d\.]*", features = \["zspell-unstable"\] \}'
replace = 'zspell = { path = "../zspell", version = "{{version}}", features = ["zspell-unstable"] }'
