[package]
name = "zspell-py"
version = "0.4.1"
edition = "2021"
publish = false

readme = "README.md"
# Note: this is symlinked from top level
license-file = "LICENSE"

[lib]
name = "zspell"
crate-type = ["cdylib"]
doc = false

[dependencies]
regex = "1.10"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
zspell = { path = "../zspell" }

[build-dependencies]
pyo3-build-config = "0.20.0"

[package.metadata.release]
shared-version = true
