[package]
name = "zspell"
version = "0.4.1"
edition = "2021"
authors = ["Trevor Gross <tmgross@umich.edu>"]
description = "Native Rust library for spellchecking"
rust-version = "1.65"

readme = "README.md"
license-file = "LICENSE"

documentation = "https://docs.rs/zspell"
repository = "https://github.com/pluots/zspell"

keywords = ["spellcheck", "spelling", "cli"]
categories = ["algorithms", "text-processing", "command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

# Config for the rust-usable library and the executable binary
[lib]
name = "zspell"
path = "src/lib.rs"


[dependencies]
# Base dependencies
cfg-if = "1.0"
hashbrown = "0.14.2"
home = "0.5.5"
lazy_static = "1.4"
regex = "1.10"
stringmetrics = "2.2.2"
sys-locale = "0.3.1"
unicode-segmentation = "1.10.1"
itertools = "0.11.0"
visibility = "0.1.0"
xxhash-rust = { version = "0.8.7", features = ["xxh32"] }

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = "3.8"
rand = "0.8.5"
test-util = { path = "test-util" }
indoc = "2.0.4"

[build-dependencies]
autocfg = "1.1.0"
indoc = "2.0.4"

[features]
unstable-suggestions = []
unstable-system = []
unstable-bench = []
zspell-unstable = ["unstable-suggestions", "unstable-system"]

[[bench]]
name = "datastructure"
harness = false

[[bench]]
name = "dict_integration"
harness = false

[[bench]]
name = "slice_contains"
harness = false

[[bench]]
name = "small_map"
harness = false

[[bench]]
name = "word_splitter"
harness = false

[package.metadata.release]
shared-version = true
allow-branch = ["main", "release"]

# Can't run replacements at workspace root. Need to use this "hacky" sort of way.
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "<!-- next-header -->"
replace = """\
  <!-- next-header -->\n\n\
  ## [Unreleased] - ReleaseDate\n\n\
  ### Added\n\n\
  ### Changed\n\n\
  ### Removed\n\n\
  """
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "<!-- next-url -->"
replace = """\
  <!-- next-url -->\n\
  [Unreleased]: https://github.com/pluots/zspell/compare/{{tag_name}}...HEAD\
  """
exactly = 1
