[package]
name = "stringmetrics_py"
version = "0.1.0"
edition = "2021"
publish = false

readme = "../../README.py.md"
license-file = "../../LICENSE"

[lib]
name = "stringmetrics"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
stringmetrics = { path = "../stringmetrics" }

[build-dependencies]
pyo3-build-config = "0.16"

[package.metadata.release]
shared-version = true
