[package]
name = "zspell-cli"
version = "0.2.1"
edition = "2021"
publish = false

# Note: this is symlinked from top level
readme = "README.md"
license-file = "LICENSE"

# Required to make name "zspell" instead of "zspell-cli"
[[bin]]
name = "zspell"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
cfg-if = "1.0.0"
clap = { version = "4.0.18", features = ["derive", "wrap_help"] }
futures-util = "0.3.25"
hex = "0.4.3"
indicatif = "0.17.1"
# We opt to use rustls instead of linking openssl
reqwest = { version = "0.11.12", features = ["blocking", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha1 = "0.10.5"
stringmetrics = "2.1"
termcolor = "1.1.3"
tokio = "1.21.2"
zspell = { path = "../zspell" }

[dev-dependencies]
criterion = "0.4"
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3"
httpmock = "0.6"
lazy_static = "1.4"
# util = { path = "util" }

[build-dependencies]
clap = { version = "4.0", features = ["derive", "wrap_help"] }
clap_mangen = "0.2"
clap_complete = "4.0"

[package.metadata.release]
shared-version = true
