[package]
name = "zspell-py"
version = "0.2.2"
edition = "2021"
publish = false

readme = "README.md"
# Note: this is symlinked from top level
license-file = "LICENSE"

[lib]
name = "zspell"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
zspell = { path = "../zspell" }
regex = "1.7"

[build-dependencies]
pyo3-build-config = "0.17.3"

[package.metadata.release]
shared-version = true
