[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "zspell"
requires-python = ">=3.7"
description = "A simple yet fast spellchecker that works with Hunspell dictionaries"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
