[package]
name = "zspell"
version = "0.1.1"
edition = "2018"
authors = ["Trevor Gross <tmgross@umich.edu>"]
description = "Native Rust library for spellchecking, with a command line interface"

readme = "README.md"
license-file = "LICENSE"

documentation = "https://docs.rs/zspell"
repository = "https://github.com/pluots/zspell"

keywords = ["spellcheck", "spelling", "cli"]
categories = ["algorithms", "text-processing", "command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

# Config for the rust-usable library and the executable binary
[lib]
name = "zspell"
path = "src/lib.rs"

[[bin]]
name = "zspell"
path = "src/bin/bin.rs"

[dependencies]
futures = "0.3"
lazy_static = "1.4"
regex = "1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
unicode-segmentation = "1.9.0"
clap = { version = "3.2", features = ["derive"] }
stringmetrics = "2"
thiserror = "1.0"
rayon = "1.5"
hashbrown = { version = "0.12", features = ["rayon"] }
home = "0.5"
cfg-if = "1.0"

[dev-dependencies]
criterion = "0.3"
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3"

[[bench]]
name = "datastructure"
harness = false

[[bench]]
name = "dict_integration"
harness = false

[package.metadata.release]
shared-version = true


# Can't run replacements at workspace root. Need to use this "hacky" sort of way.
[[package.metadata.release.pre-release-replacements]]
file = "../../CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "../../CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../../CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"

[[package.metadata.release.pre-release-replacements]]
file = "../../CHANGELOG.md"
search = "<!-- next-header -->"
replace = """\
  <!-- next-header -->\n\n\
  ## [Unreleased] - ReleaseDate\n\n\
  ### Added\n\n\
  ### Changed\n\n\
  ### Removed\n\n\
  """
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../../CHANGELOG.md"
search = "<!-- next-url -->"
replace = """\
  <!-- next-url -->\n\
  [Unreleased]: https://github.com/pluots/stringmetrics/compare/{{tag_name}}...HEAD\
  """
exactly = 1
