[package]
name = "zspell_py"
version = "0.1.0"
edition = "2018"
publish = false
# Limitation of parking-lot from pyo3
rust-version = "1.49"

readme = "README.md"
# Note: this is symlinked from top level
license-file = "LICENSE"

[lib]
name = "zspell"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
zspell = { path = "../zspell" }

[build-dependencies]
pyo3-build-config = "0.16"

[package.metadata.release]
shared-version = true
