[package]
name = "zspell_py"
version = "0.1.4"
edition = "2021"
publish = false

readme = "README.md"
# Note: this is symlinked from top level
license-file = "LICENSE"

[lib]
name = "zspell"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
zspell = { path = "../zspell" }

[build-dependencies]
pyo3-build-config = "0.16"

[package.metadata.release]
shared-version = true
